[FIX] web: z-index of properties field popup don't go below subtask form
Steps to reproduce:

- Install Project app and activate Sub-tasks.
- Go to any project > a task > go to subtasks and add a new line.
- In the next popup, create a whole new subtask, and try to add a new
property field to this subtask.

Issue:

The z-index of the properties field popup is lower than the subtask form
popup, so it goes below it.

Solution:

Changint the current the z-index from the `o_property_field_popover` for
the $zindex-popover which will make it go above the subtask form popup.

opw-3174888

closes odoo/odoo#122507

--- a/addons/web/static/src/views/fields/properties/properties_field.scss
+++ b/addons/web/static/src/views/fields/properties/properties_field.scss
@@ -82,7 +82,7 @@
 
 .o_property_field_popover {
     // put the popover behind datetime component
-    z-index: 1000 !important;
+    z-index: $zindex-popover !important;
     font-size: inherit;
     box-shadow: 0 3rem 5rem rgba($black, .18) !important;
     box-sizing: border-box;
